# kalume-profesor

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  render-build.sh  render.yaml  requirements.txt
backend/: Pipfile  constraints.txt  manage.py  pyproject.toml
backend/calculator/: forms.py  urls.py  views.py
backend/calculator/templates/: calculator_home.html  form_snippet.html
backend/mysite/: asgi.py  db.sqlite3  settings.py  urls.py  wsgi.py
backend/mysite/settings/: common.py  dev.py  prod.py
backend/mysite/static/: staticfiles.json
backend/mysite/static_files/: custom.css.map
backend/pages/: urls.py  views.py
backend/pages/templates/: base.html  home.html
backend/static/css/: custom.css  custom.css.map
frontend/: index.html
frontend/css/: custom.css  custom.css.map
frontend/scss/: custom.scss
static_files/: staticfiles.json
static_files/css/: custom.ca6e06dfd4d7.css  custom.css.map
