[tool.poetry]
name = "kalume-profesor"
version = "0.1.0"
description = ""
authors = ["Kalume <abrahammoracejas@gmail.com>"]
readme = "README.rst"
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = "^3.11.8"
django = "^5.0.3"
djangorestframework = "^3.14.0"
whitenoise = "^6.6.0"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
django-debug-toolbar = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
