[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kalume <abrahammoracejas@gmail.com>"]
readme = "README.md"
packages = [
    { include = 'calculator' },
    { include = 'pages' },
    { include = 'mysite' },
]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
djangorestframework = "^3.14.0"
whitenoise = "^6.6.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
